recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: reassignment to val
if(order=1){
        ^DragonCurve1:5: error: not found: value allezVers
	allezVers(z,t)
        ^DragonCurve1:7: error: not found: value u
	u = (x + z)/2 + (t - y)/2
        ^DragonCurve1:8: error: not found: value v
	v = (y + t)/2 - (z - x)/2
        ^