recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
if(order=1){
	setPos(x,y)
	allezVers(z,t)
}else{
	u = (x + z)/2 + (t - y)/2
	v = (y + t)/2 - (z - x)/2
	dragon(order-1, x, y, z, t)
}
}
